--- a/app/views/galleries.scala.html
+++ b/app/views/galleries.scala.html
@@ -2,11 +2,7 @@
 
 <br><br>
 
-<ul class="nav nav-pills nav-justified">
-    <li class="active"><a href="@controllers.routes.Application.galleries()">Galleries</a></li>
-    <li><a href="@controllers.routes.Application.pictures()">Photos</a></li>
-    <li><a href="@controllers.routes.Application.categories()">Categories</a></li>
-</ul>
+@topmenu(0)
 
 <br>
 
